// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be able to use it 1`] = `
<span
  className="dangerousHtml"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello World",
    }
  }
/>
`;

exports[`Should be able to use it by giving it a class 1`] = `
<span
  className="foo dangerousHtml"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello World",
    }
  }
/>
`;

exports[`Should be able to use it by giving it a differnet element 1`] = `
<div
  className="dangerousHtml"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello World",
    }
  }
/>
`;
